--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^7.4.0",
+    "@prisma/client": "5.21.1",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,7 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "prisma": "^7.4.0",
+    "prisma": "5.21.1",
     "shadcn": "^3.8.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
