--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.34.0",
     "googleapis": "^171.4.0",
     "lucide-react": "^0.564.0",
+    "mysql2": "^3.11.0",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
