--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "framer-motion": "^12.34.0",
     "googleapis": "^171.4.0",
     "lucide-react": "^0.564.0",
-    "mysql2": "^3.11.0",
-    "@prisma/adapter-mysql2": "5.21.1",
+    "mariadb": "^3.4.0",
+    "@prisma/adapter-mariadb": "5.21.1",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
