--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "migrate:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.1.3",
     "@prisma/client": "5.21.1",
+    "@stripe/stripe-js": "^4.10.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,6 +29,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^3.4.1"
   },
   "devDependencies": {
