--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=512' npx prisma generate && NODE_OPTIONS='--max-old-space-size=512' next build",
     "start": "next start -p ${PORT:-3000}",
     "lint": "eslint",
     "postinstall": "prisma generate",
